--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -40,7 +40,7 @@
 {% endblock %}
 
 {% block precontent %}
-    {% if current_theme in ["default", "pink", "classic"] %}
+    {% if current_theme in ["default", "pink", "classic", "soretro"] %}
         <div class="jumbotron page-banner">
             <div class="jumbotron-container">
                 <div class="jumbotron-welcome">
