--- a/private/skins/biscuit/scss/biscuit/_banner.scss
+++ b/private/skins/biscuit/scss/biscuit/_banner.scss
@@ -3,7 +3,9 @@
   display: flex;
   align-items: center;
   border-radius: 6px;
-  box-shadow: 0 1px 2px rgba(black, 0.1);
+  @if $theme != "biscuit" {
+    box-shadow: 0 1px 2px rgba(black, 0.1);
+  }
   margin-bottom: 5px;
   background-repeat: repeat-x;
 
@@ -25,8 +27,14 @@
 
 @each $color, $value in $color-map {
   .banner-#{$color} {
-    @include gradient-y($start-color: adjust-hue(lighten($value, 1%), 2), $end-color: adjust-hue(darken($value, 9%), 6));
-    border: 1px solid adjust-hue(darken($value, 10%), 6);
+    @if $theme != "biscuit" {
+      @include gradient-y($start-color: adjust-hue(lighten($value, 1%), 2), $end-color: adjust-hue(darken($value, 9%), 6));
+      border: 1px solid adjust-hue(darken($value, 10%), 6);
+    } @else {
+      background: $value;
+      @include gradient-y($start-color: lighten($value, 2.5%), $end-color: $value);
+      border: 1px solid darken($value, 5%);
+    }
     color: contrast-color($value, #000, #fff);
 
     a {
