--- a/private/skins/biscuit/scss/biscuit/_header.scss
+++ b/private/skins/biscuit/scss/biscuit/_header.scss
@@ -9,6 +9,10 @@
     margin-top: 12px;
   }
 
+  @if $theme == "biscuit" {
+    backdrop-filter: blur(4px);
+  }
+
   top: 0;
   z-index: 47101;
 }
@@ -68,7 +72,7 @@
         display: inline-block;
         font-size: 10px;
         color: rgba(255, 255, 255, 0.75);
-        @if $theme == "pink" or $theme == "classic" {
+        @if $theme == "pink" or $theme == "classic" or $theme == "biscuit" {
           color: rgba(0, 0, 0, 0.75);
         }
       }
@@ -130,7 +134,7 @@ form.header-search
   position: relative;
   display: none;
 
-  @if $theme != "cubicle" and $theme != "classic" {
+  @if $theme != "cubicle" and $theme != "classic" and $theme != "biscuit" {
     #header-search-button {
       position: absolute;
       right: 0;
@@ -150,31 +154,33 @@ form.header-search
   }
 
   #header-search-input {
-    @if $theme != "cubicle" and $theme != "classic" {
-      @if $theme == "pink" {
-        background: #ffe0e0;
-        border: #ff7c7c solid 1px;
-        color: #444;
-        box-shadow: none;
-      } @else {
-        border: 1px solid black;
-        color: #eee;
-        background: #575757;
-        box-shadow: 0 1px 0 #333;
-        padding: 6px 40px 6px 6px;
-        height: 30px;
-      }
-
-      &:focus {
+    @if $theme != "biscuit" {
+      @if $theme != "cubicle" and $theme != "classic" {
         @if $theme == "pink" {
           background: #ffe0e0;
           border: #ff7c7c solid 1px;
-          box-shadow: #ff6d6d 0 1px 5px;
-          color: #111;
+          color: #444;
+          box-shadow: none;
         } @else {
-          background: #eee;
-          color: #222;
-          box-shadow: 0 1px 0 #000;
+          border: 1px solid black;
+          color: #eee;
+          background: #575757;
+          box-shadow: 0 1px 0 #333;
+          padding: 6px 40px 6px 6px;
+          height: 30px;
+        }
+
+        &:focus {
+          @if $theme == "pink" {
+            background: #ffe0e0;
+            border: #ff7c7c solid 1px;
+            box-shadow: #ff6d6d 0 1px 5px;
+            color: #111;
+          } @else {
+            background: #eee;
+            color: #222;
+            box-shadow: 0 1px 0 #000;
+          }
         }
       }
     }
@@ -215,7 +221,7 @@ td.h
 
 .menulink
 {
-  @if $theme == "pink" {
+  @if $theme == "pink" or $theme == "biscuit" {
     color: black;
   } @else {
     color: white;
@@ -225,7 +231,7 @@ td.h
     font-size: 16px;
   }
 
-  @if $theme != "classic" {
+  @if $theme != "classic" and $theme != "biscuit" {
     font-weight: bold;
   }
 
@@ -266,9 +272,11 @@ td.h
   } @else if $theme == "cubicle" or $theme == "classic" {
     background: none;
     box-shadow: none;
-  } @else {
+  } @else if $theme == "soretro" {
     background: linear-gradient(to bottom, #333, #111);
     box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+  } @else {
+    background: rgba(white, 0.95);
   }
 
   height: $header-height;
@@ -276,8 +284,10 @@ td.h
 }
 
 .menu#user-menu {
-  background: #2A2A2A;
-  border: none;
+  @if $theme != "biscuit" {
+    background: #2A2A2A;
+    border: none;
+  }
   min-width: 165px;
   top: $header-height;
   border-radius: 0 0 5px 5px;
@@ -289,7 +299,9 @@ td.h
   }
 
   .menu-item-button {
-    color: white;
+    @if $theme != "biscuit" {
+      color: white;
+    }
 
     &.small {
       font-size: 11px;
