--- a/private/skins/biscuit/scss/biscuit/_tabs.scss
+++ b/private/skins/biscuit/scss/biscuit/_tabs.scss
@@ -3,7 +3,8 @@
 }
 
 .tabs {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid $content-box-border-color;
+  display: flex;
 }
 
 .tablink {
@@ -15,6 +16,7 @@
   border-radius: 4px 4px 0 0;
   color: $link-color;
   display: inline-block;
+  border: 1px solid #0000;
 
   &:hover {
     background-color: #ddd;
@@ -22,8 +24,8 @@
   }
 
   &.active {
-    background-color: #fff;
-    border: 1px solid #ddd;
+    background-color: $content-box-background-color;
+    border: 1px solid $content-box-border-color;
     border-bottom: 1px solid #fff0;
     color: black;
     font-weight: bold;
