login with subter

--- a/private/skins/biscuit/templates/login.twig
+++ b/private/skins/biscuit/templates/login.twig
@@ -28,6 +28,7 @@
                         <div class="form-input">
                             <input type="checkbox" name="remember_me" id="remember_me">
                             <label for="remember_me">Remember me (for up to a year)</label>
+                            <br><small>If you have a Subter account you can login with your username and password.</small>
                         </div>
                         {% endif %}
 
