--- a/private/skins/biscuit/templates/_layout.twig
+++ b/private/skins/biscuit/templates/_layout.twig
@@ -1,3 +1,10 @@
+{% if is_fulptube %}
+    {% set logo = '/assets/sb_branding/fulp/logo.png' %}
+{% elseif current_theme in ["default", "pink"] %}
+    {% set logo = website_branding.assets_location ~ '/logo-wordmark.png' %}
+{% else %}
+    {% set logo = website_branding.assets_location ~ '/logo-wordmark-dark.png' %}
+{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
