--- a/private/skins/biscuit/scss/biscuit/_admin_page.scss
+++ b/private/skins/biscuit/scss/biscuit/_admin_page.scss
@@ -7,24 +7,34 @@
 
 .admin-legend-title {
   margin-bottom: 3px;
-  color: #999;
-  font-weight: bold;
-}
-
-.admin-legend-icon {
-  width: 10px;
-  height: 10px;
-  display: inline-block;
-
-  @each $color, $value in $color-map-admin {
-    &.#{$color} {
-      background: $value;
-    }
-  }
+  color: gray;
+  font-weight: 450;
 }
 
 .admin-legend {
   list-style: none;
   padding: 0;
   margin: 0 0 10px 15px;
+  .admin-legend-entry {
+    display: flex;
+    align-items: center;
+    gap: 0.33em;
+    margin-bottom: 0.25em;
+
+    .admin-legend-icon {
+      width: 16px;
+      height: 16px;
+      display: block;
+
+      @each $color, $value in $color-map-admin {
+        &.#{$color} {
+          background: $value;
+        }
+      }
+    }
+  }
+}
+
+#banForm {
+  display: inline-block;
 }
