--- a/private/skins/biscuit/templates/admin_users.twig
+++ b/private/skins/biscuit/templates/admin_users.twig
@@ -1,8 +1,17 @@
 {% extends "_layout_admin.twig" %}
 
+{% if search %}
+    {% set le_url = '?page=%s&amount=' ~ amount  ~ "&search=" ~ search %}
+{% else %}
+    {% set le_url = '?page=%s&amount=' ~ amount %}
+{% endif %}
+
 {% set title = "Users" %}
 
 	{% block admincontent %}
+        {% set total_pages = (data.count / amount) | round(0, 'ceil') %}
+        {% set current_page = page %}
+
         <div class="admin-legend-title">Legend:</div>
         <ul class="admin-legend">
             <li class="admin-legend-entry">
@@ -19,7 +28,7 @@
             </li>
             <li class="admin-legend-entry">
                 <span class="admin-legend-icon shadow-banned"></span>
-                Shadowbanned
+                Shadowbanned (unused)
             </li>
             <li class="admin-legend-entry">
                 <span class="admin-legend-icon unbanned-other-unbanned"></span>
@@ -34,6 +43,24 @@
                 Staff
             </li>
         </ul>
+        <hr>
+        <div class="form-flex">
+            <form action="/admin/users/" method="GET" id="num_change">
+                <select name="amount" onchange="document.getElementById('num_change').submit()" style="height:30px;">
+                    <option value="16"{% if amount is defined and amount == 16 %} selected{% endif %}>16</option>
+                    <option value="32"{% if amount is defined and amount == 32 %} selected{% endif %}>32</option>
+                    <option value="64"{% if amount is defined and amount == 64 %} selected{% endif %}>64</option>
+                    <option value="128"{% if amount is defined and amount == 128 %} selected{% endif %}>128</option>
+                    <option value="256"{% if amount is defined and amount == 256 %} selected{% endif %}>256</option>
+                </select>
+            </form>
+            <form action="/admin/users/" method="GET" style="margin-left: auto;">
+                <input type="hidden" name="amount" value="{{ amount }}">
+                <input type="text" name="search" value="{{ search }}" style="width:170px;">
+                <input class="button button-secondary" type="submit" value="Search">
+            </form>
+        </div>
+        <hr>
         <table class="c1">
             <tr class="h">
                 <th>Username</th>
@@ -41,15 +68,35 @@
                 <th>Journals</th>
                 <th>Registered</th>
                 <th>Last logged in</th>
+                <th style="width: 160px;">Actions</th>
             </tr>
             {% for user in users %}
                 <tr class="{% if user.class %}{{ user.class }}{% endif %}">
-                    <td class="a">{{ user.info.username }}</td>
+                    <td class="a">
+                        {{ user.info.username }}
+                    </td>
                     <td class="a">{{ user.submissions }}</td>
                     <td class="a">{{ user.journals }}</td>
                     <td class="a">{{ user.info.joined | relative_time() }}</td>
                     <td class="a">{{ user.info.connected | relative_time() }}</td>
+                    <td class="a fade-into-bg">
+                        <a class="button button-secondary" href="/admin/users/{{ user.info.username }}">
+                            Check
+                        </a>
+                        {% if user.powerlevel <= 1 %}
+                            {% if user.banned %}
+                                <form id="banForm" method="post" action="/admin/users/{{ user.info.username }}" enctype="multipart/form-data">
+                                    <button name="ban_user" value="{{ user.info.username }}" class="button button-get-started" onclick="if (!confirm('Are you sure you want to unban this user?')) { return false }">Unban</button>
+                                </form>
+                            {% else %}
+                                <form id="banForm" method="post" action="/admin/users/{{ user.info.username }}" enctype="multipart/form-data">
+                                    <button name="ban_user" value="{{ user.info.username }}" class="button button-danger" onclick="if (!confirm('Are you sure you want to ban this user?')) { return false }">Ban</button>
+                                </form>
+                            {% endif %}
+                        {% endif %}
+                    </td>
                 </tr>
             {% endfor %}
         </table>
+        {{ pagination(count, amount, le_url, current_page) }}
     {% endblock %}
