Add a captcha to the registration page. (impossible challenge)

--- a/private/skins/biscuit/templates/_layout_login.twig
+++ b/private/skins/biscuit/templates/_layout_login.twig
@@ -20,6 +20,7 @@
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:url" content="{{ page_url }}">
     <meta property="og:site_name" content="{{ website_branding.name }}" />
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 </head>
 <body class="login">
 <div class="page">
