--- a/private/skins/biscuit/templates/register.twig
+++ b/private/skins/biscuit/templates/register.twig
@@ -42,6 +42,11 @@
                             <input type="date" name="birthdate" required />
                         </div>
 
+                        <div class="form-input">
+                            <label>Captcha:</label>
+                            <div class="h-captcha" data-sitekey="{{ captcha_public_token }}"></div>
+                        </div>
+
                         <div class="form-button-container">
                             <input type="submit" class="button button-primary" value="Register" name="registersubmit">
                         </div>
