(very) minor stuff

--- a/private/skins/common/submission_rating_script.twig
+++ b/private/skins/common/submission_rating_script.twig
@@ -21,4 +21,7 @@
             done();
         }
     });
+    {% if not is_user_logged_in %}
+    starRating.disable();
+    {% endif %}
 </script>
