--- a/private/skins/biscuit/templates/_layout.twig
+++ b/private/skins/biscuit/templates/_layout.twig
@@ -73,8 +73,8 @@
 {% if show_warning_banner %}
 <div class="banner banner-danger full-screen">
     <span class="notification-text">
-    Due to unknown circumstances with the provider of the squareBracket.pw and FulpTube.rocks domains, please use our
-    site through the squareBracket.me domain.
+    Due to unknown circumstances with the provider of the SquareBracket.pw and FulpTube.rocks domains, please use our
+    site through the SquareBracket.me domain.
     </span>
 </div>
 {% endif %}
