--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -60,7 +60,7 @@
                             {% if is_chaziz_sb %}
                                 <p>Your content, your narration, your niche on the web.</p>
                             {% endif %}
-                            <a href="/register" class="button button-get-started button-big">Get started ›</a>
+                            <a href="/register" class="button button-warning button-big">Get started ›</a>
                         </div>
                     {% endif %}
                 </div>
