holy fucking shit can people read the guidelines

--- a/private/skins/biscuit/templates/upload.twig
+++ b/private/skins/biscuit/templates/upload.twig
@@ -7,9 +7,12 @@
             <div class="section-title">
                 <h1>Upload</h1>
             </div>
-            <p style="font-weight: bold;">
+            <p>
                 Make sure you have read the <a href="/guidelines">guidelines</a> first. Failure to comply
                 with the guidelines will result in your upload being taken down.
+            </p>
+            <p style="font-size:1.25em;font-weight:550;">
+                Reminder: Do not reupload content that you have not made.
             </p>
             <div class="content-box">
                 <form name="uploadForm" id="uploadForm" method="post" action="upload" enctype="multipart/form-data">
