just did a little bit of tomfoolery

--- a/private/skins/biscuit/scss/biscuit/_icons.scss
+++ b/private/skins/biscuit/scss/biscuit/_icons.scss
@@ -36,10 +36,18 @@
   }
 
   &.b-secondary {
-    background-image: url( '/assets/icons/banner-secondary.svg' );
+    @if $theme == "dark" {
+      background-image: url( '/assets/icons/banner-primary.svg' );
+    } @else {
+      background-image: url( '/assets/icons/banner-secondary.svg' );
+    }
   }
 
   &.b-success {
     background-image: url( '/assets/icons/banner-success.svg' );
+  }
+
+  &.b-warning {
+    background-image: url( '/assets/icons/banner-warning.svg' );
   }
 }
