--- a/private/skins/biscuit/scss/biscuit/_variables.scss
+++ b/private/skins/biscuit/scss/biscuit/_variables.scss
@@ -33,7 +33,7 @@ $color-map: (
         "warning": $yellow,
 );
 
-// colors used for the users section in the admin panel. taken from the ones on bitview, sorry!
+// colors used for the users section in the admin panel, taken from the ones on bitview.
 $color-map-admin: (
         "banned-other-unbanned": #ff9696,
         "unbanned-other-banned": #ffc848,
