minor login page tweaks

--- a/private/skins/biscuit/templates/register.twig
+++ b/private/skins/biscuit/templates/register.twig
@@ -57,7 +57,7 @@
             </div>
             <div class="login-text">
                 By registering on {{ website_branding.name }},
-                you accept the <a href="/tos">Terms of Service</a>
+                you agree to the <a href="/tos">Terms of Service</a>
                 and <a href="/privacy">Privacy Policy</a>.
             </div>
         </div>
