add custom emojis support

--- a/private/skins/biscuit/scss/biscuit/_imports.scss
+++ b/private/skins/biscuit/scss/biscuit/_imports.scss
@@ -180,6 +180,12 @@ hr {
   display: flex;
 }
 
+.emoji {
+  display: inline;
+  width: 24px;
+  vertical-align: middle;
+}
+
 @import 'header';
 @import 'footer';
 @import 'forms';
