use our icons on rater.js

--- a/private/skins/common/submission_rating_script.twig
+++ b/private/skins/common/submission_rating_script.twig
@@ -25,3 +25,13 @@
     starRating.disable();
     {% endif %}
 </script>
+<style>
+    .star-rating {
+        background: url("/assets/icons/star_empty.svg") !important;
+        background-size: 16px !important;
+    }
+     .star-rating .star-value{
+         background: url("/assets/icons/star_full.svg") !important;
+         background-size: 16px !important;
+     }
+</style>
