backport staff page to biscuit
biscuit is technically still the default frontend on opensb. charla is actually an optional frontend that is only the default on squarebracket.

also fixed gitignore

--- a/private/skins/biscuit/templates/components/default/footer.twig
+++ b/private/skins/biscuit/templates/components/default/footer.twig
@@ -6,6 +6,7 @@
             <span><a href="/guidelines">Community Guidelines</a></span>
             <span><a href="/tos">Terms of Service</a></span>
             <span><a href="/privacy">Privacy policy</a></span>
+            <span><a href="/staff">Staff</a></span>
             <span>© 2021-{{ 'now' | date('Y') }} OpenSB contributors.</span>
             {% if is_debug %}
                 <p>{{ profiler_stats() }}</p>
