--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -107,6 +107,7 @@
             <div class="section">
                 <div class="section-title">
                     <h2>{{ localize('site_news') }}</h2>
+                    <a href="/journals/news">{{ localize('more') }}</a>
                 </div>
                 <div class="content-box">
                     {% for journal in data.news_recent %}
