--- a/private/skins/biscuit/templates/users.twig
+++ b/private/skins/biscuit/templates/users.twig
@@ -13,32 +13,28 @@
 			<div class="content-box">
 				{% for user in users.users %}
 					<div class="content-entry">
-						<table cellpadding="0" cellspacing="0">
-							<tr valign="top">
-								<td>
-									<a href="/user/{{ user.info.username }}">
-										<img src="{{ profile_picture(user.info.username) }}" width="80"
-											 alt="{{ user.info.username }}" class="content-image pfp">
-									</a>
-								</td>
-								<td>
-									<div class="content-title">
-										{{ user_link(user) }}
-									</div>
-									<div class="content-description">
-										{% if user.about|trim is not empty %}
-											<span>{{ user.about }}</span>
-										{% else %}
-											<span class="fade">No description.</span>
-										{% endif %}
-										<br>
-										<small>
-											{{ user.submissions }} uploads · {{ user.journals }} journals
-										</small>
-									</div>
-								</td>
-							</tr>
-						</table>
+						<div class="content-thumbnail">
+							<a href="/user/{{ user.info.username }}">
+								<img src="{{ profile_picture(user.info.username) }}" width="80"
+									 alt="{{ user.info.username }}" class="content-image pfp">
+							</a>
+						</div>
+						<div class="content-info">
+							<div class="content-title">
+								{{ user_link(user) }}
+							</div>
+							<div class="content-description">
+								{% if user.about|trim is not empty %}
+									<span>{{ user.about }}</span>
+								{% else %}
+									<span class="fade">No description.</span>
+								{% endif %}
+								<br>
+								<div>
+									{{ user.submissions }} uploads · {{ user.journals }} journals
+								</div>
+							</div>
+						</div>
 					</div>
 				{% endfor %}
 			</div>
