--- a/private/skins/biscuit/templates/_layout.twig
+++ b/private/skins/biscuit/templates/_layout.twig
@@ -87,8 +87,12 @@
     </div>
     {{ include(component('footer')) }}
 </div>
+<script>
+    opensb_version = '{{ opensb_version }}';
+</script>
 {% block scripts %}{% endblock %}
 {# yes #}
+<script src="/assets/common_shared.js?r={{ get_css_file_date() }}"></script>
 <script src="/assets/common_biscuit.js?r={{ get_css_file_date() }}"></script>
 <!-- {{ version_banner() }} -->
 </body>
