--- a/private/skins/biscuit/templates/_layout.twig
+++ b/private/skins/biscuit/templates/_layout.twig
@@ -1,4 +1,4 @@
-{% if current_theme in ["default", "pink"] %}
+{% if current_theme in ["default"] %}
     {% set logo = website_branding.assets_location ~ '/logo-wordmark.png' %}
 {% else %}
     {% set logo = website_branding.assets_location ~ '/logo-wordmark-dark.png' %}
