add warning about cheeserox rebrand and the data transfer

--- a/private/skins/biscuit/templates/_layout.twig
+++ b/private/skins/biscuit/templates/_layout.twig
@@ -71,7 +71,7 @@
 {% if show_warning_banner %}
 <div class="banner banner-danger full-screen">
     <span class="notification-text">
-    {{ warning_banner_text }}
+    {{ warning_banner_text | raw }}
     </span>
 </div>
 {% endif %}
